# flutter-iconfont-generate

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-test.yaml  release.yaml  test.yaml
cli/: Cargo.toml
cli/src/: main.rs
converter/: Cargo.toml
converter/src/: converter.rs
converter/tests/: converter_test.rs
core/: Cargo.toml
core/src/: core.rs
core/tests/: core_test.rs
flutter-iconfont-generate/: Cargo.toml
flutter-iconfont-generate/src/: main.rs
