[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
convert_case = "0.6.0"
lazy_static = "1.4.0"
regex = { version = "1.9.5", features = [] }
