[package]
name = "flutter-iconfont-generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
clap = { version = "4.4.3", features = ["derive"] }
core = { path = "../core" }
