[package]
name = "flutter-iconfont-generate"
version = "0.0.1"
edition = "2021"
authors = ["YeungKC"]
repository = "https://github.com/YeungKC/flutter-iconfont-generate"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
clap = { version = "4.4.3", features = ["derive"] }
core = { path = "../core" }
